logs/flask-vue-scaffold.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask_Vue_Scaffold-0.1.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold'...
Compiling './lib/python3.5/site-packages/flask_vue_scaffold/cli.py'...
***   File "./lib/python3.5/site-packages/flask_vue_scaffold/cli.py", line 34
    click.echo(f"Initializing new project: {name}")
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_vue_scaffold/data'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/bin'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/build'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/config'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp/api'...
Compiling './lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp/api/__init__.py'...
***   File "./lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp/api/__init__.py", line 18
    return jsonify({'result': f'{random.randint(1, 6)}'})
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp/cli'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/pyapp/templates'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src/assets'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src/components'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src/router'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src/store'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/src/store/modules'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test/e2e'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test/e2e/custom-assertions'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test/e2e/specs'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test/unit'...
Listing './lib/python3.5/site-packages/flask_vue_scaffold/data/test/unit/specs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
